--- a/assets/css/playstore.css
+++ b/assets/css/playstore.css
@@ -30,6 +30,14 @@
   top: 100px;
   z-index: 0;
   overflow: hidden;
+  border-radius: 12px;
+  border: solid 1px transparent;
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 8s linear infinite;
 }
 @media screen and (max-width: 992px) {
   .play_store_section .play_store_container {
@@ -50,7 +58,7 @@
   height: 400px;
   top: 225px;
   left: -78px;
-  background-color: #209181;
+  background-color: #1a2c2a;
   border-radius: 50%;
   filter: blur(152px);
   transform: translate3d(0, 0, 0);
@@ -63,7 +71,7 @@
   height: 525px;
   top: 150px;
   right: 113px;
-  background-color: #209181;
+  background-color: #1a2c2a;
   border-radius: 50%;
   filter: blur(152px);
   transform: translate3d(0, 0, 0);
@@ -84,13 +92,6 @@
     text-align: center;
   }
 }
-@media (min-width: 992px) and (max-width: 1300px) {
-  .play_store_section h2 {
-    font-size: 36px;
-    line-height: 46px;
-    text-align: left;
-  }
-}
 .play_store_section ul {
   padding: 0;
   margin: 10px 20px 20px;
@@ -101,18 +102,14 @@
   font-size: 14px;
   font-weight: 400;
 }
-@media (max-width: 991px) {
-  .play_store_section ul {
-    list-style: none;
-  }
-}
 .play_store_section p {
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 300;
   line-height: 24px;
   text-align: left;
   color: #ffffff;
-  margin: 0 0px 40px;
+  color: #889795;
+  margin: 0 0px 20px;
 }
 @media screen and (max-width: 991px) {
   .play_store_section p {
@@ -122,6 +119,10 @@
 .play_store_section .play_store_right {
   display: flex;
   border-bottom-right-radius: 40px;
+}
+.play_store_section .play_store_right svg {
+  height: 100%;
+  z-index: 1;
 }
 @media (min-width: 768px) and (max-width: 1300px) {
   .play_store_section .play_store_right {
@@ -136,7 +137,7 @@
   z-index: 9;
 }
 .play_store_section .play_store_right img:last-child {
-  right: 152px;
+  right: 38px;
 }
 @media screen and (max-width: 991px) {
   .play_store_section .play_store_right img {
@@ -147,7 +148,7 @@
 .play_store_section .play_store_left {
   position: relative;
   z-index: 2;
-  padding: 70px 70px 20px;
+  padding: 40px 70px 40px;
 }
 @media screen and (max-width: 992px) {
   .play_store_section .play_store_left {
