--- a/assets/css/sass/counter.scss
+++ b/assets/css/sass/counter.scss
@@ -1,5 +1,6 @@
+@import './variable.scss';
 .counter_section{
-  background-color: #080d0e;
+  // background-color: #080d0e;
   height: auto;
   display: flex;
   justify-content: center;
