--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -1,6 +1,7 @@
 @import './variable.scss';
 .footer_section{
-    background: linear-gradient(359.8deg, rgba(26, 50, 48, 0.46) 5.16%, rgba(62, 171, 144, 0.22) 99.83%);
+    // background: linear-gradient(359.8deg, rgba(26, 50, 48, 0.46) 5.16%, rgba(62, 171, 144, 0.22) 99.83%);
+    background: linear-gradient(359.8deg, rgb(0 0 0 / 46%) 5.16%, rgb(97 97 97 / 22%) 99.83%);;
     background-color: $black;
     padding: 200px 0px 0;
     @media screen and (max-width:992px) {
@@ -17,6 +18,9 @@
             img{
                 width: 100%;
                 height: 100%;
+            }
+            svg path {
+                fill: #3eab90;
             }
         }
         
@@ -159,7 +163,7 @@
 	border-radius: 50%;
 	position: fixed;
 	bottom: 100px;
-	right: 30px;
+	right: 10px;
 	transition: background-color .3s,
 		opacity .5s, visibility .5s;
 	opacity: 0;
