--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -4,7 +4,25 @@ body {
   background-color: $bg-color;
   overflow-x: hidden;
 }
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #000000;
+}
 
+body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #000000;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
 header {
   padding: 0px 40px;
   position: fixed;
@@ -235,7 +253,7 @@ header {
 
 .buttons {
 	--w: 180px;
-    --h: 60px;
+    --h: 50px;
     --icon-size: 25px;
     --text-color: rgb(210 210 240);
     --box-glow-color: transparent;
@@ -251,19 +269,20 @@ header {
     border: none;
     color: var(--text-color);
     background: rgb(4 8 20 / 0.8);
-    box-shadow: 0px 5px 0 0px rgb(191 191 202 / 22%), 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px var(--box-glow-color);
+    box-shadow: 0px 5px 0 0px #3eab906e, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px #1d4d2d5c;
     overflow: hidden;
     cursor: pointer;
     transition: box-shadow 500ms ease;
     z-index: 2;
     font-size:15px;
+    border: 1px solid #3eab9091;
 }
 
 .buttons::before {
 	content: "";
 	position: absolute;
 	inset: 0;
-	background: rgb(200 200 220 / 0.1);
+	background:#1a2c2a;
 	box-shadow: inset 0 0px 24px 0 rgb(170 230 250 / 0.12);
 	border-radius: var(--h);
 	z-index: 1;
@@ -276,7 +295,7 @@ header {
 }
 
 .buttons .text {
-	transform: translateX(-30%);
+	transform: translateX(-20%);
 	transition: transform 500ms ease;
 }
 
@@ -289,7 +308,7 @@ header {
 	transition: transform 500ms ease, color 500ms ease;
 }
 .buttons svg {
-	width: 100%;
+	width: 70%;
 	height: 100%;
 	fill: currentColor;
 }
@@ -303,17 +322,17 @@ header {
 }
 .buttons:hover::before,
 .buttons:active::before {
-	transform: translateX(65%);
+	transform: translateX(72%);
 	box-shadow: inset 0 0px 0px 0 transparent;
 }
 .buttons:hover .text,
 .buttons:active .text {
-	transform: translateX(-40%);
+	transform: translateX(-25%);
 	animation-play-state: running;
 }
 .buttons:hover .icon,
 .buttons:active .icon {
-	transform: translateX(calc(var(--w) - var(--icon-size) - 19px));
+	transform: translateX(calc(var(--w) - var(--icon-size) - 15px));
 	color: var(--color);
 }
 
