--- a/assets/css/counter.css
+++ b/assets/css/counter.css
@@ -1,5 +1,17 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .counter_section {
-  background-color: #080d0e;
   height: auto;
   display: flex;
   justify-content: center;
@@ -98,7 +110,7 @@
   font-weight: 500;
   line-height: 60px;
   text-align: center;
-  color: #FFFFFF;
+  color: #3eab90;
   text-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
 }
 @media screen and (max-width: 991px) {
@@ -124,6 +136,7 @@
 }
 .counter_section #counter .col-lg-3:last-child:before {
   background: unset;
+  box-shadow: none;
 }
 @media screen and (max-width: 991px) {
   .counter_section #counter .col-lg-3 {
@@ -135,10 +148,11 @@
   content: "";
   position: absolute;
   top: 0;
-  right: 0; /* Position it to the right edge */
-  width: 1.5px; /* Width of the border line */
-  height: 100%; /* Full height */
-  background: linear-gradient(180deg, #3EAB90 0%, #FFFFFF 100%);
+  right: 0;
+  width: 1.5px;
+  height: 100%;
+  background-color: #3eab90;
+  box-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
 }
 @media screen and (max-width: 991px) {
   .counter_section #counter .col-lg-3::before {
@@ -153,7 +167,7 @@
   font-weight: 700;
   font-weight: bolder;
   color: #FFFFFF;
-  background-image: linear-gradient(180deg, #3EAB90 0%, #3EAB90 100%);
+  background-color: #3eab90;
   text-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
   background-clip: text;
   -webkit-background-clip: text;
