--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,6 +17,23 @@ body {
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #000000;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #000000;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
 header {
   padding: 0px 40px;
   position: fixed;
@@ -219,7 +236,7 @@ header .fz_sigin ul li:last-child a {
 
 .buttons {
   --w: 180px;
-  --h: 60px;
+  --h: 50px;
   --icon-size: 25px;
   --text-color: rgb(210 210 240);
   --box-glow-color: transparent;
@@ -235,19 +252,20 @@ header .fz_sigin ul li:last-child a {
   border: none;
   color: var(--text-color);
   background: rgba(4, 8, 20, 0.8);
-  box-shadow: 0px 5px 0 0px rgba(191, 191, 202, 0.22), 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px var(--box-glow-color);
+  box-shadow: 0px 5px 0 0px rgba(62, 171, 144, 0.431372549), 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
   overflow: hidden;
   cursor: pointer;
   transition: box-shadow 500ms ease;
   z-index: 2;
   font-size: 15px;
+  border: 1px solid rgba(62, 171, 144, 0.568627451);
 }
 
 .buttons::before {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(200, 200, 220, 0.1);
+  background: #1a2c2a;
   box-shadow: inset 0 0px 24px 0 rgba(170, 230, 250, 0.12);
   border-radius: var(--h);
   z-index: 1;
@@ -260,7 +278,7 @@ header .fz_sigin ul li:last-child a {
 }
 
 .buttons .text {
-  transform: translateX(-30%);
+  transform: translateX(-20%);
   transition: transform 500ms ease;
 }
 
@@ -274,7 +292,7 @@ header .fz_sigin ul li:last-child a {
 }
 
 .buttons svg {
-  width: 100%;
+  width: 70%;
   height: 100%;
   fill: currentColor;
 }
@@ -290,19 +308,19 @@ header .fz_sigin ul li:last-child a {
 
 .buttons:hover::before,
 .buttons:active::before {
-  transform: translateX(65%);
+  transform: translateX(72%);
   box-shadow: inset 0 0px 0px 0 transparent;
 }
 
 .buttons:hover .text,
 .buttons:active .text {
-  transform: translateX(-40%);
+  transform: translateX(-25%);
   animation-play-state: running;
 }
 
 .buttons:hover .icon,
 .buttons:active .icon {
-  transform: translateX(calc(var(--w) - var(--icon-size) - 19px));
+  transform: translateX(calc(var(--w) - var(--icon-size) - 15px));
   color: var(--color);
 }
 
