--- a/assets/css/newsletter.css
+++ b/assets/css/newsletter.css
@@ -12,8 +12,7 @@
   initial-value: 0turn;
 }
 .newsletter_section {
-  background-color: #000000;
-  text-align: center;
+  text-align: left;
   padding: 0px 0px 0;
 }
 @media screen and (max-width: 991px) {
@@ -22,10 +21,10 @@
   }
 }
 .newsletter_section h3 {
-  color: #3eab90;
-  font-size: 50px;
-  font-weight: 500;
-  line-height: 70.31px;
+  color: #ffffff;
+  font-size: 96px;
+  font-weight: 300;
+  line-height: 96px;
   margin-bottom: 0px;
 }
 @media screen and (max-width: 991px) {
@@ -36,11 +35,11 @@
 }
 .newsletter_section h5 {
   font-size: 35px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-  margin-bottom: 0px;
+  color: #3eab90;
+  text-align: left;
+  margin-bottom: 20px;
   padding-top: 15px;
 }
 @media screen and (max-width: 991px) {
@@ -50,14 +49,11 @@
   }
 }
 .newsletter_section .input-group {
-  width: 636.71px;
-  height: 70px;
+  width: 100%;
+  height: 55px;
   gap: 0px;
   border-radius: 0px 8px 8px 0px;
-  border: 1px 0px 0px 0px;
-  opacity: 0px;
-  margin: 0 auto;
-  margin-top: 30px;
+  margin: 25px auto 30px;
   border: none;
 }
 @media screen and (max-width: 768px) {
@@ -88,4 +84,11 @@
 }
 .newsletter_section .input-group .form-control {
   font-size: 16px;
+  background: transparent;
+  border: solid 1px transparent;
+  color: #ddd;
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+}
+.newsletter_section .input-group .form-control::placeholder {
+  color: #3a3a3a;
 }
