--- a/assets/css/sass/newsletter.scss
+++ b/assets/css/sass/newsletter.scss
@@ -1,16 +1,16 @@
 @import './variable.scss';
 .newsletter_section{
-    background-color: $black;
-    text-align: center;
+    // background-color: $black;
+    text-align: left;
     padding:0px 0px 0;
     @media screen and (max-width:991px) {
         padding-bottom: 30px;
        }
     h3{
-        color: $primary-color;
-        font-size: 50px;
-        font-weight: 500;
-        line-height: 70.31px;
+        color: $white;
+        font-size: 96px;
+        font-weight: 300;
+        line-height: 96px;
         margin-bottom: 0px;
         @media screen and (max-width:991px) {
           font-size: 35px;
@@ -18,27 +18,26 @@
          }
     }
     h5{
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 30px;
-    color: $white;
-    text-align: center;
-    margin-bottom: 0px;
-    padding-top: 15px;
+      font-size: 35px;
+      font-weight: 300;
+      line-height: 30px;
+      color: $primary-color;
+      text-align: left;
+      margin-bottom: 20px;
+      padding-top: 15px;
     @media screen and (max-width:991px) {
       font-size: 30px;
       line-height: 40px;
      }
     }
     .input-group{
-    width: 636.71px;
-    height: 70px;
+    width: 100%;
+    height: 55px;
     gap: 0px;
     border-radius: 0px 8px 8px 0px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
-    margin: 0 auto;
-    margin-top: 30px;
+    // border: 1px 0px 0px 0px;
+    // opacity: 0px;
+    margin: 25px auto 30px;
     border: none;
     @media screen and (max-width:768px) {
       width: auto;
@@ -62,6 +61,13 @@
     }
     .form-control{
       font-size: 16px;
+      background: transparent;
+      border: solid 1px transparent;
+      color: #ddd;
+      background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+      &::placeholder{
+        color: #3a3a3a;
+      }
     }
     }
 }
